# alman

./: .gitignore  pyproject.toml  settings.json.example
src/alman/: __init__.py  __main__.py
src/alman/app/: cli.py  router.py
src/alman/core/: base.py  config.py  settings.py
src/alman/infrastructure/: app_file.py  base.py  config.py  filesystem.py  logging.py
src/alman/models/: context.py
src/alman/utils/: data_utils.py
src/almora/: __init__.py  __main__.py
src/almora/app/: cli.py
src/almora/core/: settings.py
src/almora/infrastructure/: filesystem.py  logging.py
src/almora/models/: context.py
src/almora/utils/: data_utils.py
tests/: test__main__.py
tests/app/: test_cli.py
tests/core/: test_settings.py
tests/infrastructure/: test_app_file.py  test_filesystem.py
tests/models/: test_context.py
tests/utils/: test_data_utils.py
