[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alman"
version = "0.1.0"
description = "คำอธิบายสั้นๆ เกี่ยวกับโปรเจกต์ของคุณ"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["cli", "alman", "utility"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/09pattt/alman"

[project.scripts]
alman = "alman:entry_point"