[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alman"
version = "0.1.0"
description = "CLI tools for dealing with command line scripts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Napat Tosawat", email = "09pattt@gmail.com"}
]
keywords = ["cli", "alman", "utility", "alias"]
dependencies = [
    "rich>=15.0.0"
]

[project.urls]
Homepage = "https://github.com/09pattt/alman"

[project.scripts]
alman = "alman:start"